fix: shifted emoji button on left of text area

--- a/projects/shared-components/discussion-personal-chat/discussion-personal-chat.component.scss
+++ b/projects/shared-components/discussion-personal-chat/discussion-personal-chat.component.scss
@@ -49,6 +49,7 @@
 
         .emoji-button {
           padding: 0.1rem;
+          margin: 0.3rem;
         }
 
         emoji-mart {
